# g.solana-pro

./: Anchor.toml  README.md  package.json  tsconfig.json
app/: get_my_tracks.ts  get_track.ts  update_track.ts  upload_track.ts
app/utils/: ipfs_interact.ts
migrations/: deploy.ts
programs/track_upload/: Cargo.toml
programs/track_upload/src/: lib.rs
tests/: track_upload.ts
